--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     
     <!-- Header -->
     <div class="header">
-      <h1 class="title-font">BUDGET TRACKER</h1>
+      <h1 class="title-font">BUDGY</h1>
     </div>
 
     <!-- Starting Balance Section -->
