--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
       <div id="transactions-list"></div>
     </div>
 
+    <!-- Footer -->
+    <div class="footer">
+      <p>made by <a href="https://x.com/madebylipsum" target="_blank">toni romero</a></p>
+    </div>
+
   </div>
 
   <script src="js/logic.js"></script>
