--- a/index.html
+++ b/index.html
@@ -14,33 +14,31 @@
     
     <!-- Header -->
     <div class="header">
-      <h1 class="title-font">BUDGY</h1>
-    </div>
-
-    <!-- Starting Balance Section -->
-    <div class="card brutal-border brutal-shadow starting-balance-section">
-      <h2 class="title-font form-title">STARTING BALANCE</h2>
-      <div class="starting-balance-display">
-        <span class="card-label">Current Starting Balance</span>
-        <span class="starting-balance-value" id="starting-balance-display">$0.00</span>
+      <div class="header-content">
+        <h1 class="title-font">BUDGY</h1>
+        <button class="btn-starting-balance" id="edit-starting-balance-btn">
+          <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"/>
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
+          </svg>
+          <span>Set Starting Balance</span>
+        </button>
       </div>
-      <form id="starting-balance-form">
-        <div class="grid grid-2">
-          <div class="form-group">
-            <label class="form-label">Amount</label>
-            <input type="number" step="0.01" id="starting-balance-input" placeholder="0.00" required>
-          </div>
-        </div>
-        <div class="btn-group">
-          <button type="submit" class="btn btn-primary">
-            <span>Set Starting Balance</span>
-          </button>
-        </div>
-      </form>
     </div>
 
-    <!-- Balance Cards -->
-    <div class="grid grid-3">
+    <!-- Balance Hero Section -->
+    <div class="balance-hero">
+      <div class="balance-hero-content">
+        <span class="card-label">Current Balance</span>
+        <div class="balance-hero-amount" id="total-balance">$0.00</div>
+        <div class="balance-hero-meta">
+          <span class="card-label">Starting: <span id="starting-balance-display">$0.00</span></span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Income & Expense Cards -->
+    <div class="grid grid-2">
       <div class="card brutal-border brutal-shadow">
         <div class="card-header">
           <span class="card-label">Income</span>
@@ -60,15 +58,37 @@
         </div>
         <div class="card-value text-red" id="total-expenses">$0.00</div>
       </div>
+    </div>
 
-      <div class="card brutal-border brutal-shadow">
-        <div class="card-header">
-          <span class="card-label">Balance</span>
-          <svg class="icon" id="balance-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-          </svg>
+    <!-- Starting Balance Modal -->
+    <div id="starting-balance-modal" class="modal">
+      <div class="modal-content brutal-border brutal-shadow">
+        <div class="modal-header">
+          <h2 class="title-font form-title">STARTING BALANCE</h2>
+          <button class="btn-icon" id="close-modal-btn">
+            <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+            </svg>
+          </button>
         </div>
-        <div class="card-value" id="total-balance">$0.00</div>
+        <div class="starting-balance-display">
+          <span class="card-label">Current Starting Balance</span>
+          <span class="starting-balance-value" id="starting-balance-modal-display">$0.00</span>
+        </div>
+        <form id="starting-balance-form">
+          <div class="form-group">
+            <label class="form-label">New Amount</label>
+            <input type="number" step="0.01" id="starting-balance-input" placeholder="0.00" required>
+          </div>
+          <div class="btn-group">
+            <button type="submit" class="btn btn-primary">
+              <span>Update Balance</span>
+            </button>
+            <button type="button" class="btn btn-secondary" id="cancel-modal-btn">
+              Cancel
+            </button>
+          </div>
+        </form>
       </div>
     </div>
 
